deployment/statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: web
  namespace: default
  labels:
    app: web
    fix-pod-ip: enabled
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
      fix-pod-ip: enabled
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web
        fix-pod-ip: enabled
      annotations:
        fix.pod.ip: "[{\"n0001.example.node.com\":[\"10.10.100.100\"]},{\"n0002.example.node.com\":[\"10.10.101.100\"]},{\"n0003.example.node.com\":[\"10.10.102.100\"]}]"
    spec:
      containers:
        - name: web
          image: xx.xx.xx.xx/example/nginx:103
